# palette

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/palette-cli/: Cargo.toml
crates/palette-cli/src/: admin.rs  doctor.rs  interactor_factory.rs  main.rs  shutdown.rs  start.rs
crates/palette-cli/src/admin/: command.rs  context.rs  interactor.rs  io.rs  mod.rs  paths.rs  runner.rs
crates/palette-cli/src/admin/noop/: blueprint.rs  container.rs  github_review.rs  mod.rs  terminal.rs
crates/palette-cli/src/config/: mod.rs  rules_config.rs
crates/palette-cli/tests/: blueprints_validate.rs  docker_e2e.rs  hooks.rs  message_queuing.rs  permission_prompt.rs  review_escalation.rs  review_integrator_lifecycle.rs  reviews.rs  scenarios.rs  send.rs  supervisor_lifecycle.rs  tasks.rs  workflows.rs
crates/palette-cli/tests/helper/: fixtures.rs  mod.rs  session_guard.rs  spawn_server.rs  stub_container_runtime.rs  tmux.rs
crates/palette-cli/tests/helper/fixtures/: blueprint_fixture.rs  ids.rs  jobs.rs  mod.rs  workers.rs
crates/palette-core/: Cargo.toml
crates/palette-core/src/: agent_role.rs  agent_state.rs  agent_status.rs  config.rs  container_id.rs  docker.rs  docker_config.rs  docker_manager.rs  error.rs  field_error.rs  lib.rs  orchestrator.rs  pending_delivery.rs  persistent_state.rs  reason_key.rs  state.rs  tmux_target.rs
crates/palette-core/src/config/: mod.rs  rules_config.rs  tmux_config.rs
crates/palette-core/src/models/: agent_role.rs  agent_state.rs  container_id.rs  mod.rs  pending_delivery.rs  tmux_target.rs
crates/palette-db/: Cargo.toml
crates/palette-db/src/: adapter.rs  agent_store.rs  database.rs  error.rs  errors.rs  job_store.rs  lib.rs  models.rs  queued_message.rs  repository.rs  rules.rs  schema.rs  status_id.rs  task_file.rs  task_store.rs
crates/palette-db/src/database/: assign_job.rs  assign_task.rs  build_task_tree.rs  count_active_members.rs  create_job.rs  create_task.rs  create_workflow.rs  dequeue_message.rs  enqueue_message.rs  find_assignable_jobs.rs  find_assignable_tasks.rs  find_crafts_for_review.rs  find_reviews_for_craft.rs  find_reviews_for_work.rs  find_works_for_review.rs  get_blueprint.rs  get_dependencies.rs  get_dependents.rs  get_job.rs  get_job_by_task.rs  get_review_comments.rs  get_review_submissions.rs  get_task.rs  get_task_dependencies.rs  get_workflow.rs  has_pending_messages.rs  increment_member_counter.rs  increment_worker_counter.rs  list_blueprints.rs  list_jobs.rs  list_tasks.rs  mod.rs  repository_row.rs  save_blueprint.rs  submit_review.rs  task_rule_engine_test.rs  test_helpers.rs  update_job_status.rs  update_task_status.rs  update_workflow_status.rs
crates/palette-db/src/database/agent/: find_agent.rs  find_agent_by_container.rs  find_supervisor_for_task.rs  insert_agent.rs  list_agents.rs  mod.rs  remove_agent.rs  row.rs  update_agent_status.rs
crates/palette-db/src/database/job/: assign_job.rs  count_active_members.rs  create_job.rs  delete_jobs_by_task.rs  find_assignable_jobs.rs  (+12 more)
crates/palette-db/src/lookup/: agent_role.rs  agent_status.rs  craft_status.rs  job_status.rs  job_type.rs  mechanized_status.rs  mod.rs  priority.rs  review_status.rs  task_status.rs  verdict.rs  worker_role.rs  worker_status.rs  workflow_status.rs
crates/palette-db/src/models/: job_row.rs  mod.rs  queued_message.rs  queued_message_row.rs  review_submission_row.rs  stored_blueprint.rs  task_row.rs  worker_row.rs  workflow_row.rs
crates/palette-fs/: Cargo.toml
crates/palette-fs/src/: adapter.rs  blueprint.rs  lib.rs  to_task_tree.rs
crates/palette-fs/src/adapter/: blueprint_error.rs  blueprint_validator.rs  mod.rs  to_task_tree.rs
crates/palette-fs/src/blueprint/: mod.rs  task_node.rs  task_tree_blueprint.rs  to_task_tree.rs
crates/palette-orchestrator/: Cargo.toml
crates/palette-orchestrator/src/: docker_config.rs  error.rs  event_handler.rs  github_client.rs  lib.rs  orchestrator.rs  perspectives_config.rs  testing.rs
crates/palette-orchestrator/src/effects/: deliver_queued_messages.rs  format_task_instruction.rs  mod.rs  process_effects.rs  spawn_member.rs
crates/palette-orchestrator/src/orchestrator/: assign_deferred_jobs.rs  clean_orphan_containers.rs  deliver_queued_messages.rs  deliver_to_all_idle.rs  handle_event.rs  mod.rs  orchestrator_task.rs  process_effects.rs  recover_from_crash.rs  resume_booting_watchers.rs  save_state.rs  shutdown.rs  spawn_member.rs  spawn_readiness_watcher.rs  spawn_supervisor.rs  start.rs  suspend.rs  validate_artifacts.rs  worker_monitor.rs  workspace.rs
crates/palette-orchestrator/src/testing/: mock_blueprint_reader.rs  mock_container_runtime.rs  mock_data_store.rs  mock_github_review.rs  mock_terminal_session.rs  mod.rs
crates/palette-orchestrator/tests/: prompts.rs
crates/palette-server/: Cargo.toml
crates/palette-server/src/: api_types.rs  create_task_api.rs  error.rs  extract.rs  lib.rs  permission_timeout.rs  priority_api.rs  review_comment_input_api.rs  review_submission_response.rs  routes.rs  submit_review_api.rs  task_filter_api.rs  task_response.rs  task_status_api.rs  update_task_api.rs
crates/palette-server/src/api_types/: blueprint_response.rs  create_job_request.rs  create_task_api.rs  create_task_request.rs  error_response.rs  job_filter.rs  job_response.rs  job_status.rs  job_type.rs  mod.rs  priority.rs  repository.rs  repository_api.rs  review_comment_input.rs  review_comment_response.rs  review_submission_response.rs  send_permission_request.rs  send_request.rs  send_response.rs  submit_review_api.rs  submit_review_request.rs  task_file.rs  task_filter.rs  task_filter_api.rs  task_response.rs  task_status.rs  task_type.rs  task_type_api.rs  update_job_request.rs  update_task_api.rs  update_task_request.rs  verdict.rs  verdict_api.rs
crates/palette-server/src/routes/: mod.rs  send.rs  send_permission.rs  shutdown.rs  workers.rs
crates/palette-server/tests/: blueprints.rs  e2e.rs  hooks.rs  reviews.rs  scenarios.rs  send.rs  tasks.rs  workflows.rs
crates/palette-server/tests/helper/: mod.rs
(+460 files in other folders)
