[workspace]
resolver = "2"
members = [
    "crates/palette-core",
    "crates/palette-db",
    "crates/palette-server",
    "crates/palette-tmux",
    "crates/palette-cli",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.35", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
