[workspace]
resolver = "2"
members = [
    "crates/palette-cli",
    "crates/palette-db",
    "crates/palette-docker",
    "crates/palette-domain",
    "crates/palette-file-state",
    "crates/palette-fs",
    "crates/palette-orchestrator",
    "crates/palette-server",
    "crates/palette-service",
    "crates/palette-tmux",
]

[profile.dev]
# Reduce debug info from default (2) to mitigate LLVM SIGSEGV on full rebuild.
# To restore full debug info for a debugger: CARGO_PROFILE_DEV_DEBUG=2 cargo build
debug = 1
# Reduce from default (256) to mitigate LLVM SIGSEGV on full rebuild
codegen-units = 16

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
