[package]
name = "palette-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "palette"
path = "src/main.rs"

[dependencies]
axum.workspace = true
palette-core = { path = "../palette-core" }
palette-db = { path = "../palette-db" }
palette-domain = { path = "../palette-domain" }
palette-server = { path = "../palette-server" }
palette-tmux = { path = "../palette-tmux" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
anyhow.workspace = true
