[package]
name = "palette-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "palette"
path = "src/main.rs"

[dependencies]
axum.workspace = true
palette-db = { path = "../palette-db" }
palette-docker = { path = "../palette-docker" }
palette-domain = { path = "../palette-domain" }
palette-file-state = { path = "../palette-file-state" }
palette-orchestrator = { path = "../palette-orchestrator" }
palette-server = { path = "../palette-server" }
palette-tmux = { path = "../palette-tmux" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
anyhow.workspace = true
