[package]
name = "palette-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "palette"
path = "src/main.rs"

[dependencies]
clap.workspace = true
axum.workspace = true
palette-db = { path = "../palette-db" }
palette-docker = { path = "../palette-docker" }
palette-domain = { path = "../palette-domain" }
palette-fs = { path = "../palette-fs" }
palette-orchestrator = { path = "../palette-orchestrator" }
palette-server = { path = "../palette-server" }
palette-tmux = { path = "../palette-tmux" }
palette-usecase = { path = "../palette-usecase" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
rusqlite.workspace = true

[dev-dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile = "3"
