[package]
name = "palette-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
palette-db = { path = "../palette-db" }
palette-tmux = { path = "../palette-tmux" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
