[package]
name = "palette-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
palette-db = { path = "../palette-db" }
palette-docker = { path = "../palette-docker" }
palette-domain = { path = "../palette-domain" }
palette-tmux = { path = "../palette-tmux" }
serde.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
