[package]
name = "palette-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
palette-domain = { path = "../palette-domain" }
palette-usecase = { path = "../palette-usecase" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
