[package]
name = "palette-fs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
palette-domain = { path = "../palette-domain" }
palette-macros = { path = "../palette-macros" }
palette-usecase = { path = "../palette-usecase" }
serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile = "3"
