[package]
name = "palette-orchestrator"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
palette-core = { path = "../palette-core" }
palette-domain = { path = "../palette-domain" }
palette-usecase = { path = "../palette-usecase" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile = "3"
