[package]
name = "palette-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
palette-db = { path = "../palette-db" }
palette-docker = { path = "../palette-docker" }
palette-domain = { path = "../palette-domain" }
palette-tmux = { path = "../palette-tmux" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
palette-orchestrator = { path = "../palette-orchestrator" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
