[package]
name = "palette-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
palette-domain = { path = "../palette-domain" }
palette-usecase = { path = "../palette-usecase" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
