[package]
name = "palette-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
palette-core = { path = "../palette-core" }
palette-domain = { path = "../palette-domain" }
palette-macros = { path = "../palette-macros" }
palette-usecase = { path = "../palette-usecase" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2 = "0.10"
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
